			CHANGELOG for KAME kit

$Id: CHANGELOG,v 1.1070 2000/06/28 06:00:38 sakane Exp $

<200006>
Wed Jun 28 15:01:09 JST 2000 sakane@ydc.co.jp
	* kame/kame/racoon:
	improved sending a notify message including delete payload.
	It's sent when one of below situations happens:
		o receiving SADB_DELETE message from kernel.
		o receiving SADB_FLUSH message from kernel.
		o flushing phase2 handler.

Wed Jun 28 01:16:41 JST 2000	SUZUKI Shinsuke <suz@sdl.hitachi.co.jp>
	* freebsd4/INSTALL
	write up configuration-related matters for FreeBSD-4.0

Wed Jun 28 01:12:59 JST 2000  itojun@iijlab.net
	* libinet6/name6.c: correct error handling in DNS name lookups.

Tue Jun 27 23:12:54 JST 2000	SUZUKI Shinsuke <suz@sdl.hitachi.co.jp>
	* bsdi3/sbin/ifconfig/ifconfig.c: fixed error trap when given name 
	corresponds to multiple v6 addresses.

Tue Jun 27 14:01:39 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* freebsd3/ports/emacs: upgrade to 20.7

Tue Jun 27 00:32:20 JST 2000  itojun@iijlab.net
	* netbsd/sys/arch/*/conf/GENERIC.v6: enable PULLDOWN_TEST for all
	  architectures.  this is done because mbuf pullup code in
	  sys/net/if_loop.c has been found to be a source of performance hit,
	  and PULLDOWN_TEST code is found to be stable enough.
	* netbsd/sys/sys/mbuf.h: recover 4.4BSD MINCLSIZE.

Sun Jun 25 21:11:19 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* start to support FreeBSD 3.5-RELEASE. 3.4-RELEASE is obsolete.

Sat Jun 24 23:41:31 JST 2000  itojun@iijlab.net
	* freebsd4/lib/libinet6/getnameinfo.c: correct NIS lookup.  from ume.

Sat Jun 24 16:43:58 JST 2000  itojun@iijlab.net
	* netbsd/pkgsrc/net/{libpcap,tcpdump}: upgrade to 6/19.

Sat Jun 24 02:20:33 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* freebsd3/ports/wyvern: new port, a simple web server
	* freebsd3/ports/tcpd: new tcpd from Artur Frysiak <wiget@pld.org.pl>
	* freebsd3/ports/wget: fix security hole and use latest IPv6 patch
	* freebsd3/ports/vnc: use latest IPv6 patch
